- Novas páginas adicionadas - txt com informações atualizadas

--- a/pages/cadastrar_aluno.html
+++ b/pages/cadastrar_aluno.html
@@ -104,30 +104,191 @@
                             <fieldset id="fieldsetLabel">
                                 <fieldset id="bloco">
                                     <div class="dados">
+                                        <label>Nome:</label>
+                                        <input type="text" name="nome_aluno" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Sobrenome:</label>
+                                        <input type="text" name="sobrenome_aluno" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Nome do pai:</label>
+                                        <input type="text" name="nome_pai_aluno" maxlength="100" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Nome da mãe:</label>
+                                        <input type="text" name="nome_mae_aluno" maxlength="100" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Número para contato:</label>
+                                        <input type="number" name="celular_aluno" maxlength="11" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>E-mail:</label>
+                                        <input type="email" name="email_aluno" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Data de nascimento:</label>
+                                        <input type="date" name="data_nascimento_aluno" maxlength="10" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>CPF:</label>
+                                        <input type="text" name="cpf_aluno" maxlength="14" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label id="labelGenero">Gênero:</label>
+                                        <div id="divGenero"> 
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="sexo_aluno" value="M" checked />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Masculino</label>
+                                            </div>
+                                        </div>
+                                        <div id="divGenero">
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="sexo_aluno" value="F" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Feminino</label>
+                                            </div>
+                                        </div>
+                                        <div id="divGenero">
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="sexo_aluno" value="O" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Outro</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Grau de Instrução:</label>
+                                        <select name="grau_de_instrucao_aluno">
+                                            <option value="Ensino Fundamental - Em Andamento" selected>Ensino Fundamental - Em Andamento</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Etnia:</label>
+                                        <select name="etnia_aluno">
+                                            <option value="Amarela" selected>Amarela</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Endereço:</label>
+                                        <input type="text" name="endereco_aluno" maxlength="60" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Número Residencial:</label>
+                                        <input type="number" name="numero_aluno" maxlength="6" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Bairro:</label>
+                                        <input type="text" name="bairro_aluno" maxlength="35" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Cidade:</label>
+                                        <input type="text" name="cidade_aluno" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Estado:</label>
+                                        <select name="estado_aluno">
+                                            <option value="estado1" selected>Preencher com Estados</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Estado Civil:</label>
+                                        <select name="estado_civil_aluno">
+                                            <option value="Solteiro" selected>Solteiro</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Religião:</label>
+                                        <input type="text" name="religiao_aluno" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label id="labelGenero">Responsáveis</label>
+                                        <div id="divGenero"> 
+                                            <div id="divRadioGenero">
+                                                <input type="checkbox" name="res_fin_aluno" value="" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Responsável Financeiro</label>
+                                            </div>
+                                        </div>
+                                        <div id="divGenero">
+                                            <div id="divRadioGenero">
+                                                <input type="checkbox" name="res_leg_aluno" value="" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Responsável Legal</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label id="labelGenero">Trabalha?</label>
+                                        <div id="divGenero"> 
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="trabalho_aluno" value="True" checked />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Sim</label>
+                                            </div>
+                                        </div>
+                                        <div id="divGenero">
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="trabalho_aluno" value="False" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Não</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
                                         <label>Curso:</label>
-                                        <select name="nome_curso">
-                                            <option value="curso1">Preencher com Cursos Cadastrados</option>
+                                        <select name="curso_aluno">
+                                            <option value="curso1" selected>Preencher com os cursos disponíveis</option>
                                         </select>
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>Módulo:</label>
-                                        <select name="nome_modulo">
-                                            <option value="curso1">Preencher com Módulos Cadastrados</option>
-                                        </select>
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>Unidade Curricular:</label>
-                                        <input type="text" name="nome_uc" maxlength="60"/>
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>Carga Horária (hrs):</label>
-                                        <input type="number" name="carga_horaria" maxlength="60"/>
                                     </div>
                                 </fieldset>
                             </fieldset>
@@ -135,7 +296,7 @@
                     </div>
                 </article>
                 <article id="articleButton">
-                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Uc">Cadastrar</button></p>
+                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Aluno">Cadastrar</button></p>
                 </article>
             </section>
             <hr id="hr1" />
