--- a/pages/cadastrar_aluno_turma.html
+++ b/pages/cadastrar_aluno_turma.html
@@ -106,7 +106,7 @@
                                     <div class="dados">
                                         <label>Aluno:</label>
                                         <select name="nome_aluno">
-                                            <option value="aluno1">Preencher com Alunos Cadastrados</option>
+                                            <option value="aluno1" selected>Preencher com Alunos Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
@@ -114,7 +114,7 @@
                                     <div class="dados">
                                         <label>Curso:</label>
                                         <select name="nome_curso">
-                                            <option value="curso1">Preencher com Cursos Cadastrados</option>
+                                            <option value="curso1" selected>Preencher com Cursos Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
@@ -122,7 +122,7 @@
                                     <div class="dados">
                                         <label>Turma:</label>
                                         <select name="nome_turma">
-                                            <option value="turma1">Preencher com Turmas Cadastradas</option>
+                                            <option value="turma1" selected>Preencher com Turmas Cadastradas</option>
                                         </select>
                                     </div>
                                 </fieldset>
