--- a/pages/cadastrar_professor_uc.html
+++ b/pages/cadastrar_professor_uc.html
@@ -106,7 +106,7 @@
                                     <div class="dados">
                                         <label>Professor:</label>
                                         <select name="nome_professor">
-                                            <option value="professor1">Preencher com Professores Cadastrados</option>
+                                            <option value="professor1" selected>Preencher com Professores Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
@@ -114,7 +114,7 @@
                                     <div class="dados">
                                         <label>Curso:</label>
                                         <select name="nome_curso">
-                                            <option value="curso1">Preencher com Cursos Cadastrados</option>
+                                            <option value="curso1" selected>Preencher com Cursos Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
@@ -122,7 +122,7 @@
                                     <div class="dados">
                                         <label>Unidade Curricular:</label>
                                         <select name="nome_uc">
-                                            <option value="uc1">Preencher com Unidades Curriculares Cadastradas</option>
+                                            <option value="uc1" selected>Preencher com Unidades Curriculares Cadastradas</option>
                                         </select>
                                     </div>
                                 </fieldset>
