--- a/pages/cadastrar_responsavel_legal.html
+++ b/pages/cadastrar_responsavel_legal.html
@@ -96,147 +96,137 @@
             <hr id="hr2" />
             <section id="sectionMeio">
                 <article id="articleTitulo">
-                    <h2 class="h2Titulo">Cadastrar Cronograma</h2>
+                    <h2 class="h2Titulo">Cadastrar Responsável Legal</h2>
                 </article>
                 <article id="articleInput">
                     <div id="divLabel">
                         <form action="#" method="post">
                             <fieldset id="fieldsetLabel">
-                                <fieldset id="bloco2">
-                                    <div class="dados">
-                                        <label id="labelGenero">Gênero:</label>
-                                        <div id="divGenero"> 
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="M" checked />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Masculino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="F" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Feminino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="O" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Outro</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco2">
-                                    <div class="dados">
-                                        <label id="labelGenero">Gênero:</label>
-                                        <div id="divGenero"> 
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="M" checked />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Masculino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="F" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Feminino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="O" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Outro</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </fieldset>
-                                <article id="articleButton">
-                                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Aluno">Cadastrar</button></p>
-                                </article>
-                                <fieldset id="bloco2">
-                                    <div class="dados">
-                                        <label id="labelGenero">Gênero:</label>
-                                        <div id="divGenero"> 
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="M" checked />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Masculino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="F" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Feminino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="O" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Outro</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco2">
-                                    <div class="dados">
-                                        <label id="labelGenero">Gênero:</label>
-                                        <div id="divGenero"> 
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="M" checked />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Masculino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="F" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Feminino</label>
-                                            </div>
-                                        </div>
-                                        <div id="divGenero">
-                                            <div id="divRadioGenero">
-                                                <input type="radio" name="sexo_aluno" value="O" />
-                                            </div>
-                                            <div id="divLabelGenero">
-                                                <label id="genero">Outro</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </fieldset>
-                                <article id="articleButton">
-                                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Aluno">Cadastrar</button></p>
-                                </article>
-                                <p>tabela</p>
                                 <fieldset id="bloco">
                                     <div class="dados">
-                                        <label>Clique na tabela para preenche-lá com os professores que aparecerem na caixinha abaixo</label>
-                                        <input type="text" name="nome_pai_aluno" maxlength="100" required/>
+                                        <label>Nome:</label>
+                                        <input type="text" name="nome_res_leg" maxlength="50" required/>
                                     </div>
                                 </fieldset>
-                                <article id="articleButton">
-                                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Aluno">Cadastrar</button></p>
-                                </article>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Sobrenome:</label>
+                                        <input type="text" name="sobrenome_res_leg" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Número para contato:</label>
+                                        <input type="number" name="celular_res_leg" maxlength="11" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>E-mail:</label>
+                                        <input type="email" name="email_res_leg" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Data de nascimento:</label>
+                                        <input type="date" name="data_nascimento_res_leg" maxlength="10" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>CPF:</label>
+                                        <input type="text" name="cpf_res_leg" maxlength="14" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label id="labelGenero">Gênero:</label>
+                                        <div id="divGenero"> 
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="sexo_res_leg" value="M" checked />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Masculino</label>
+                                            </div>
+                                        </div>
+                                        <div id="divGenero">
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="sexo_res_leg" value="F" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Feminino</label>
+                                            </div>
+                                        </div>
+                                        <div id="divGenero">
+                                            <div id="divRadioGenero">
+                                                <input type="radio" name="sexo_res_leg" value="O" />
+                                            </div>
+                                            <div id="divLabelGenero">
+                                                <label id="genero">Outro</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Etnia:</label>
+                                        <select name="etnia_res_leg">
+                                            <option value="Amarela" selected>Amarela</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Endereço:</label>
+                                        <input type="text" name="endereco_res_leg" maxlength="60" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Número Residencial:</label>
+                                        <input type="number" name="numero_res_leg" maxlength="6" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Bairro:</label>
+                                        <input type="text" name="bairro_res_leg" maxlength="35" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Cidade:</label>
+                                        <input type="text" name="cidade_res_leg" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Estado:</label>
+                                        <select name="estado_res_leg">
+                                            <option value="estado1" selected>Preencher com Estados</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Estado Civil:</label>
+                                        <select name="estado_civil_res_leg">
+                                            <option value="Solteiro" selected>Solteiro</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Religião:</label>
+                                        <input type="text" name="religiao_res_leg" maxlength="50" required/>
+                                    </div>
+                                </fieldset>
                             </fieldset>
                         </form>
                     </div>
+                </article>
+                <article id="articleButton">
+                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Responsavel_Legal">Cadastrar</button></p>
                 </article>
             </section>
             <hr id="hr1" />
