--- a/pages/cadastrar_turma.html
+++ b/pages/cadastrar_turma.html
@@ -106,7 +106,7 @@
                                     <div class="dados">
                                         <label>Curso:</label>
                                         <select name="nome_curso">
-                                            <option value="curso1">Preencher com Cursos Cadastrados</option>
+                                            <option value="curso1" selected>Preencher com Cursos Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
