--- a/pages/cadastrar_uc.html
+++ b/pages/cadastrar_uc.html
@@ -106,7 +106,7 @@
                                     <div class="dados">
                                         <label>Curso:</label>
                                         <select name="nome_curso">
-                                            <option value="curso1">Preencher com Cursos Cadastrados</option>
+                                            <option value="curso1" selected>Preencher com Cursos Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
@@ -114,20 +114,20 @@
                                     <div class="dados">
                                         <label>Módulo:</label>
                                         <select name="nome_modulo">
-                                            <option value="curso1">Preencher com Módulos Cadastrados</option>
+                                            <option value="curso1" selected>Preencher com Módulos Cadastrados</option>
                                         </select>
                                     </div>
                                 </fieldset>
                                 <fieldset id="bloco">
                                     <div class="dados">
                                         <label>Unidade Curricular:</label>
-                                        <input type="text" name="nome_uc" maxlength="60"/>
+                                        <input type="text" name="nome_uc" maxlength="60" required/>
                                     </div>
                                 </fieldset>
                                 <fieldset id="bloco">
                                     <div class="dados">
                                         <label>Carga Horária (hrs):</label>
-                                        <input type="number" name="carga_horaria" maxlength="60"/>
+                                        <input type="number" name="carga_horaria" maxlength="60" required/>
                                     </div>
                                 </fieldset>
                             </fieldset>
